MODULO DE USERS (CREACION Y ELIMINACION)
Creacion de nuevo modulo de usuarios